make all classes final

--- a/Code/Helpers/moduleentitymodel.cachetracker_array.swift.liquid
+++ b/Code/Helpers/moduleentitymodel.cachetracker_array.swift.liquid
@@ -6,13 +6,13 @@ import CacheTracker
 // TODO: Replace SomeModuleEntityModel with project model implementing CacheTracker/CacheTrackerPlainModel protocol
 // Example:
 //  import CacheTracker
-//  class SomeModuleEntityModel { }
+//  final class SomeModuleEntityModel { }
 //  extension SomeModuleEntityModel: CacheTrackerPlainModel {}
 //  More info at https://github.com/ladeiko/CacheTracker
 
 typealias {{ prefix }}{{ module_info.name }}ModuleEntityModel = SomeModuleEntityModel
 
-//class {{ prefix }}{{ module_info.name }}ModuleEntityModel: CacheTrackerPlainModel {
+//final class {{ prefix }}{{ module_info.name }}ModuleEntityModel: CacheTrackerPlainModel {
 //}
 
 extension {{ prefix }}{{ module_info.name }}ModuleEntityModel: ArrayCacheTrackerElement {
