--- a/Code/View/view_controller.alert.swift.liquid
+++ b/Code/View/view_controller.alert.swift.liquid
@@ -4,13 +4,11 @@ import UIKit
 import TransparentProxyViewController
 //import ViperMcFlurryX_Swift
 
-class {{ prefix }}{{ module_info.name }}ViewController: TransparentProxyViewController, {{ prefix }}{{module_info.name}}ViewInput {
-
-    // MARK: - VIPER Vars
+final class {{ prefix }}{{ module_info.name }}ViewController: TransparentProxyViewController, {{ prefix }}{{ module_info.name }}ViewInput {
+// MARK: - VIPER Vars
 
     var output: {{ prefix }}{{ module_info.name }}ViewOutput!
-
-    // MARK: - Outlets
+// MARK: - Outlets
     // TODO: Place your code here
 
     // MARK: - Vars
@@ -34,10 +32,9 @@ class {{ prefix }}{{ module_info.name }}ViewController: TransparentProxyViewCont
         }
     }
 
-    // MARK: - {{ prefix }}{{module_info.name}}ViewInput
-
-    func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme) {
-        // TODO: Place your code here
+    // MARK: - {{ prefix }}{{ module_info.name }}ViewInput
+func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme) {
+// TODO: Place your code here
     }
 
     func setAlertTitle(_ title: String?) {
@@ -78,20 +75,19 @@ class {{ prefix }}{{ module_info.name }}ViewController: TransparentProxyViewCont
 import SwiftUI
 
 fileprivate struct {{ prefix }}{{ module_info.name }}ViewControllerContainerView: UIViewControllerRepresentable {
-    typealias UIViewControllerType = {{ prefix }}{{ module_info.name }}ViewController
-
-    func makeUIViewController(context: Context) -> UIViewControllerType {
+typealias UIViewControllerType = {{ prefix }}{{ module_info.name }}ViewController
+func makeUIViewController(context: Context) -> UIViewControllerType {
         return {{ prefix }}{{ module_info.name }}ViewController()
-    }
+}
 
     func updateUIViewController(_ uiViewController: UIViewControllerType, context: Context) {}
 }
 
 struct {{ prefix }}{{ module_info.name }}ViewController_Previews: PreviewProvider {
-    static var previews: some View {
-        {{ prefix }}{{ module_info.name }}ViewControllerContainerView()
-            .colorScheme(.light)
-        {{ prefix }}{{ module_info.name }}ViewControllerContainerView()
+static var previews: some View {
+{{ prefix }}{{ module_info.name }}ViewControllerContainerView()
+.colorScheme(.light)
+{{ prefix }}{{ module_info.name }}ViewControllerContainerView()
             .colorScheme(.dark)
     }
 }
