--- a/Code/View/view_controller.root_tableview.swift.liquid
+++ b/Code/View/view_controller.root_tableview.swift.liquid
@@ -3,21 +3,18 @@
 import UIKit
 //import ViperMcFlurryX_Swift
 
-class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {{ prefix }}{{ module_info.name }}ViewInput {
-
-    // MARK: - VIPER Vars
+final class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {{ prefix }}{{ module_info.name }}ViewInput {
+// MARK: - VIPER Vars
 
     var output: {{ prefix }}{{ module_info.name }}ViewOutput!
-    
-    // MARK: - Outlets
+// MARK: - Outlets
     // TODO: Place your code here
 
     // MARK: - Vars
 
     private var context: {{ prefix }}{{ module_info.name }}ViewCellContext!
-    private let models = {{ prefix }}{{ module_info.name }}ModuleEntityModel.allCases
-    
-    // MARK: - Life cycle
+private let models = {{ prefix }}{{ module_info.name }}ModuleEntityModel.allCases
+// MARK: - Life cycle
 
     override func viewDidLoad() {
         super.viewDidLoad()
@@ -27,9 +24,8 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
     }
 
     // MARK: - {{ prefix }}{{ module_info.name }}ViewInput
-    
-    func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme) {
-        // TODO: Place your code here
+func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme) {
+// TODO: Place your code here
     }
 
     // MARK: - UI Actions
@@ -47,7 +43,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
 
     override func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
         let cell = tableView.dequeueReusableCell(withIdentifier: {{ prefix }}{{ module_info.name }}ViewCell.cellIdentifier) as! {{ prefix }}{{ module_info.name }}ViewCell
-        let model = models[indexPath.item]
+let model = models[indexPath.item]
         cell.configure(with: model, in: context)
         return cell
     }
@@ -56,12 +52,12 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
 
     override func tableView(_ tableView: UITableView, willDisplay cell: UITableViewCell, forRowAt indexPath: IndexPath) {
         let cell = cell as! {{ prefix }}{{ module_info.name }}ViewCell
-        cell.willDisplay()
+cell.willDisplay()
     }
 
     override func tableView(_ tableView: UITableView, didEndDisplaying cell: UITableViewCell, forRowAt indexPath: IndexPath) {
         let cell = cell as! {{ prefix }}{{ module_info.name }}ViewCell
-        cell.stopDisplay()
+cell.stopDisplay()
     }
 
     override func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
@@ -73,7 +69,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
 
     private func setupContext() {
         context = {{ prefix }}{{ module_info.name }}ViewCellContext(
-             //loadModelImage: { [weak self] model in
+//loadModelImage: { [weak self] model in
             //    return await self?.output.viewNeedsImage(for: model)
             //}
         )
@@ -100,20 +96,19 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
 import SwiftUI
 
 fileprivate struct {{ prefix }}{{ module_info.name }}ViewControllerContainerView: UIViewControllerRepresentable {
-    typealias UIViewControllerType = {{ prefix }}{{ module_info.name }}ViewController
-
-    func makeUIViewController(context: Context) -> UIViewControllerType {
+typealias UIViewControllerType = {{ prefix }}{{ module_info.name }}ViewController
+func makeUIViewController(context: Context) -> UIViewControllerType {
         return {{ prefix }}{{ module_info.name }}ViewController()
-    }
+}
 
     func updateUIViewController(_ uiViewController: UIViewControllerType, context: Context) {}
 }
 
 struct {{ prefix }}{{ module_info.name }}ViewController_Previews: PreviewProvider {
-    static var previews: some View {
-        {{ prefix }}{{ module_info.name }}ViewControllerContainerView()
-            .colorScheme(.light)
-        {{ prefix }}{{ module_info.name }}ViewControllerContainerView()
+static var previews: some View {
+{{ prefix }}{{ module_info.name }}ViewControllerContainerView()
+.colorScheme(.light)
+{{ prefix }}{{ module_info.name }}ViewControllerContainerView()
             .colorScheme(.dark)
     }
 }
