--- a/Code/View/view_controller.swiftui.swift.liquid
+++ b/Code/View/view_controller.swiftui.swift.liquid
@@ -3,7 +3,7 @@
 import SwiftUI
 //import ViperMcFlurryX_Swift
 
-class {{ prefix }}{{ module_info.name }}ViewController: UIViewController {
+final class {{ prefix }}{{ module_info.name }}ViewController: UIViewController {
 
     // MARK: - VIPER Vars
 
