--- a/Tests/Interactor/interactor_tests.cachetracker.swift.liquid
+++ b/Tests/Interactor/interactor_tests.cachetracker.swift.liquid
@@ -3,7 +3,7 @@
 import XCTest
 import CacheTracker
 
-class {{ prefix }}{{ module_info.name }}InteractorTests: XCTestCase {
+final class {{ prefix }}{{ module_info.name }}InteractorTests: XCTestCase {
 
     override func setUp() {
         super.setUp()
