--- a/Tests/Interactor/interactor_tests.swift.liquid
+++ b/Tests/Interactor/interactor_tests.swift.liquid
@@ -1,10 +1,8 @@
 {% include 'header' %}
 
 import XCTest
-
-class {{ prefix }}{{ module_info.name }}InteractorTests: XCTestCase {
-
-    override func setUp() {
+final class {{ prefix }}{{ module_info.name }}InteractorTests: XCTestCase {
+override func setUp() {
         super.setUp()
         // Put setup code here. This method is called before the invocation of each test method in the class.
     }
@@ -15,8 +13,7 @@ class {{ prefix }}{{ module_info.name }}InteractorTests: XCTestCase {
     }
 
     class MockPresenter: {{ prefix }}{{ module_info.name }}InteractorOutput {
-
-        // MARK: - Vars
+// MARK: - Vars
         // TODO: Place your code here
 
         // MARK: - {{ prefix }}{{ module_info.name }}InteractorOutput
