--- a/Tests/Presenter/presenter_tests.complex.cachetracker.swift.liquid
+++ b/Tests/Presenter/presenter_tests.complex.cachetracker.swift.liquid
@@ -4,7 +4,7 @@ import XCTest
 import CacheTracker
 import ViperMcFlurryX
 
-class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
+final class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
 
     override func setUp() {
         super.setUp()
