--- a/Code/Configurator/configurator.tabbar.swift.liquid
+++ b/Code/Configurator/configurator.tabbar.swift.liquid
@@ -4,7 +4,7 @@ import UIKit
 import OnDeallocateX
 import ViperMcFlurryX_Swift
 
-class {{ prefix }}{{ module_info.name }}ModuleConfigurator:  ViperModuleFactory {
+final class {{ prefix }}{{ module_info.name }}ModuleConfigurator:  ViperModuleFactory {
 
     func configureModuleForViewInput(viewInput: UIViewController, with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig?) {
         if let viewController = viewInput as? {{ prefix }}{{ module_info.name }}ViewController {
