--- a/Code/Helpers/moduleentitymodel.complex.cachetracker_array.swift.liquid
+++ b/Code/Helpers/moduleentitymodel.complex.cachetracker_array.swift.liquid
@@ -6,7 +6,7 @@ import CacheTracker
 // TODO: Replace SomeModuleEntityModel with project model implementing CacheTracker/CacheTrackerPlainModel protocol
 // Example:
 //  import CacheTracker
-//  class SomeModuleEntityModel { }
+//  final class SomeModuleEntityModel { }
 //  extension SomeModuleEntityModel: CacheTrackerPlainModel {}
 //  More info at https://github.com/ladeiko/CacheTracker
 
@@ -23,7 +23,7 @@ extension {{ prefix }}{{ module_info.name }}ModuleEntityModel: ArrayCacheTracker
     }
 }
 
-class {{ prefix }}{{ module_info.name }}ModuleEmbeddableModel: CacheTrackerPlainRecurrentConsumerItem, {{ prefix }}{{ module_info.name }}Embeddable {
+final class {{ prefix }}{{ module_info.name }}ModuleEmbeddableModel: CacheTrackerPlainRecurrentConsumerItem, {{ prefix }}{{ module_info.name }}Embeddable {
 
     let model: {{ prefix }}{{ module_info.name }}ModuleEntityModel!
 
