--- a/Code/Interactor/interactor.cachetracker.swift.liquid
+++ b/Code/Interactor/interactor.cachetracker.swift.liquid
@@ -4,7 +4,7 @@ import CacheTracker
 import CoreData
 //import UIKit
 
-class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.name }}InteractorInput, CacheTrackerDelegate {
+final class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.name }}InteractorInput, CacheTrackerDelegate {
 
     // MARK: - VIPER Vars
 
