--- a/Code/Interactor/interactor.cachetracker_array.swift.liquid
+++ b/Code/Interactor/interactor.cachetracker_array.swift.liquid
@@ -3,7 +3,7 @@
 import CacheTracker
 //import UIKit
 
-class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.name }}InteractorInput, CacheTrackerDelegate {
+final class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.name }}InteractorInput, CacheTrackerDelegate {
 
     // MARK: - VIPER Vars
 
