--- a/Code/Interactor/interactor.tabbar.swift.liquid
+++ b/Code/Interactor/interactor.tabbar.swift.liquid
@@ -1,6 +1,6 @@
 {% include 'header' %}
 
-class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.name }}InteractorInput {
+final class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.name }}InteractorInput {
     
     // MARK: - VIPER Vars
 
