--- a/Code/Router/router.mcflurry.alert.swift.liquid
+++ b/Code/Router/router.mcflurry.alert.swift.liquid
@@ -1,10 +1,8 @@
 {% include 'header' %}
 
 import ViperMcFlurryX_Swift
-
-class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name }}RouterInput {
-    
-    // MARK: - VIPER Vars
+final class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name }}RouterInput {
+// MARK: - VIPER Vars
 
     weak var calleeOutput: (ViperModuleOutput /* Add supported protocols here, e.g: & AnotherModuleOutput */)!
     weak var transitionHandler: ViperModuleTransitionHandler!
