--- a/Code/Router/router.mcflurry.complex.swift.liquid
+++ b/Code/Router/router.mcflurry.complex.swift.liquid
@@ -3,7 +3,7 @@
 import ViperMcFlurryX_Swift
 import TopViewControllerDetection
 
-class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name }}RouterInput {
+final class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name }}RouterInput {
     
     // MARK: - VIPER Vars
 
