--- a/Code/Router/router.mcflurry.swift.liquid
+++ b/Code/Router/router.mcflurry.swift.liquid
@@ -2,7 +2,7 @@
 
 import ViperMcFlurryX_Swift
 import TopViewControllerDetection
-class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name }}RouterInput {
+final class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name }}RouterInput {
 // MARK: - VIPER Vars
 
     weak var calleeOutput: (ViperModuleOutput /* Add supported protocols here, e.g: & AnotherModuleOutput */)!
