--- a/Code/Router/router.mcflurry.tabbar.swift.liquid
+++ b/Code/Router/router.mcflurry.tabbar.swift.liquid
@@ -3,29 +3,25 @@
 import ViperMcFlurryX_Swift
 import TopViewControllerDetection
 
-class {{ prefix }}{{ module_info.name }}Router: NSObject, {{ prefix }}{{ module_info.name }}RouterInput {
-    
-    // MARK: - VIPER Vars
+final class {{ prefix }}{{ module_info.name }}Router: NSObject, {{ prefix }}{{ module_info.name }}RouterInput {
+// MARK: - VIPER Vars
 
     weak var calleeOutput: (ViperModuleOutput /* Add supported protocols here, e.g: & AnotherModuleOutput */)!
     weak var transitionHandler: ViperModuleTransitionHandler!
     weak var output: {{ prefix }}{{ module_info.name }}RouterOutput!
-
-    // MARK: - Vars
+// MARK: - Vars
 
     private struct Tab {
         let id: {{ prefix }}{{ module_info.name }}ModuleTab
-        weak var controller: UIViewController?
+weak var controller: UIViewController?
     }
     
     private var tabs: [Tab] = []
 
     // MARK: - {{ prefix }}{{ module_info.name }}RouterInput
-
-    func embedTabs(_ module: [{{ prefix }}{{ module_info.name }}ModuleTab], current: {{ prefix }}{{ module_info.name }}ModuleTab?, with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {
-
-        let existing: [{{ prefix }}{{ module_info.name }}ModuleTab: UIViewController] = tabs.reduce(into: [:], { $0[$1.id] = $1.controller })
-        tabs = []
+func embedTabs(_ module: [{{ prefix }}{{ module_info.name }}ModuleTab], current: {{ prefix }}{{ module_info.name }}ModuleTab?, with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {
+let existing: [{{ prefix }}{{ module_info.name }}ModuleTab: UIViewController] = tabs.reduce(into: [:], { $0[$1.id] = $1.controller })
+tabs = []
 
         let viewControllers: [UIViewController] = module.reduce(into: []) { (controllers, module) in
             var controller: UIViewController! = existing[module]
@@ -56,9 +52,8 @@ class {{ prefix }}{{ module_info.name }}Router: NSObject, {{ prefix }}{{ module_
     }
 
     func showTab(_ tab: {{ prefix }}{{ module_info.name }}ModuleTab) {
-        
-        let index = {{ prefix }}{{ module_info.name }}ModuleTab.allCases.firstIndex(of: tab)!
-        let tabbarController = transitionHandler as! UITabBarController
+let index = {{ prefix }}{{ module_info.name }}ModuleTab.allCases.firstIndex(of: tab)!
+let tabbarController = transitionHandler as! UITabBarController
 
         guard tabbarController.selectedIndex != index else {
             return
