--- a/Code/Router/router.swift.liquid
+++ b/Code/Router/router.swift.liquid
@@ -1,8 +1,7 @@
 {% include 'header' %}
 
-class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name }}RouterInput {
-
-    // MARK: - Vars
+final class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name }}RouterInput {
+// MARK: - Vars
     // TODO: Place your code here
 
     // MARK: - {{ prefix }}{{ module_info.name }}RouterInput
