--- a/Code/Service/default_impl.swift.liquid
+++ b/Code/Service/default_impl.swift.liquid
@@ -1,10 +1,8 @@
 {% include 'header' %}
 
 import ViperServices
-
-class {{ prefix }}{{ module_info.name }}ServiceImpl: ViperService, {{ prefix }}{{ module_info.name }}Service {
-
-    // MARK: - Vars
+final class {{ prefix }}{{ module_info.name }}ServiceImpl: ViperService, {{ prefix }}{{ module_info.name }}Service {
+// MARK: - Vars
     // TODO: Place your code here
 
     // MARK: - ViperService
