--- a/Code/Service/helpers/redux.state.subscriber.swift.liquid
+++ b/Code/Service/helpers/redux.state.subscriber.swift.liquid
@@ -3,7 +3,7 @@
 import ReSwift
 import RxSwift
 
-class {{ prefix }}{{ module_info.name }}ServiceStateStoreSubscriber : StoreSubscriber {
+final class {{ prefix }}{{ module_info.name }}ServiceStateStoreSubscriber : StoreSubscriber {
 
     typealias StoreSubscriberStateType = {{ prefix }}{{ module_info.name }}ServiceState
 
