--- a/Code/View/Helpers/collectionview_layout.swift.liquid
+++ b/Code/View/Helpers/collectionview_layout.swift.liquid
@@ -1,8 +1,7 @@
 {% include 'header' %}
 
 import UIKit
-
-class {{ prefix }}{{ module_info.name }}ViewLayout: UICollectionViewFlowLayout {
+final class {{ prefix }}{{ module_info.name }}ViewLayout: UICollectionViewFlowLayout {
     
     override init() {
         super.init()
