--- a/Code/View/root_view_state.swiftui.swift.liquid
+++ b/Code/View/root_view_state.swiftui.swift.liquid
@@ -1,8 +1,7 @@
 {% include 'header' %}
 
 import Combine
-
-class {{ prefix }}{{ module_info.name }}RootViewState: ObservableObject {
+final class {{ prefix }}{{ module_info.name }}RootViewState: ObservableObject {
     
     @Published var sampleValue = 0
 
