--- a/Code/View/view_controller.tabbar.swift.liquid
+++ b/Code/View/view_controller.tabbar.swift.liquid
@@ -3,13 +3,11 @@
 import UIKit
 //import ViperMcFlurryX_Swift
 
-class {{ prefix }}{{ module_info.name }}ViewController: UITabBarController, {{ prefix }}{{ module_info.name }}ViewInput {
-
-    // MARK: - VIPER Vars
+final class {{ prefix }}{{ module_info.name }}ViewController: UITabBarController, {{ prefix }}{{ module_info.name }}ViewInput {
+// MARK: - VIPER Vars
 
     var output: {{ prefix }}{{ module_info.name }}ViewOutput!
-
-    // MARK: - Outlets
+// MARK: - Outlets
     // TODO: Place your code here
 
     // MARK: - Vars
@@ -40,9 +38,8 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITabBarController, {{ p
     }
 
     // MARK: - {{ prefix }}{{ module_info.name }}ViewInput
-
-    func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme) {
-        // TODO: Place your code here
+func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme) {
+// TODO: Place your code here
     }
 
     // MARK: - UI Actions
@@ -67,20 +64,19 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITabBarController, {{ p
 import SwiftUI
 
 fileprivate struct {{ prefix }}{{ module_info.name }}ViewControllerContainerView: UIViewControllerRepresentable {
-    typealias UIViewControllerType = {{ prefix }}{{ module_info.name }}ViewController
-
-    func makeUIViewController(context: Context) -> UIViewControllerType {
+typealias UIViewControllerType = {{ prefix }}{{ module_info.name }}ViewController
+func makeUIViewController(context: Context) -> UIViewControllerType {
         return {{ prefix }}{{ module_info.name }}ViewController()
-    }
+}
 
     func updateUIViewController(_ uiViewController: UIViewControllerType, context: Context) {}
 }
 
 struct {{ prefix }}{{ module_info.name }}ViewController_Previews: PreviewProvider {
-    static var previews: some View {
-        {{ prefix }}{{ module_info.name }}ViewControllerContainerView()
-            .colorScheme(.light)
-        {{ prefix }}{{ module_info.name }}ViewControllerContainerView()
+static var previews: some View {
+{{ prefix }}{{ module_info.name }}ViewControllerContainerView()
+.colorScheme(.light)
+{{ prefix }}{{ module_info.name }}ViewControllerContainerView()
             .colorScheme(.dark)
     }
 }
