--- a/Code/View/view_controller.tableview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.tableview.cachetracker.swift.liquid
@@ -5,7 +5,7 @@ import CacheTracker
 import CacheTrackerConsumer
 //import ViperMcFlurryX_Swift
 
-class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITableViewDataSource, UITableViewDelegate, {{ prefix }}{{module_info.name}}ViewInput {
+final class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITableViewDataSource, UITableViewDelegate, {{ prefix }}{{module_info.name}}ViewInput {
 
     // MARK: - VIPER Vars
 
