--- a/Code/View/view_controller.uikitplus.swift.liquid
+++ b/Code/View/view_controller.uikitplus.swift.liquid
@@ -3,26 +3,23 @@
 import UIKitPlus
 //import ViperMcFlurryX_Swift
 
-class {{ prefix }}{{ module_info.name }}ViewController: UIViewController {
-
-    // MARK: - VIPER Vars
+final class {{ prefix }}{{ module_info.name }}ViewController: UIViewController {
+// MARK: - VIPER Vars
 
     var output: {{ prefix }}{{ module_info.name }}ViewOutput!
-
-    // MARK: - Outlets
+// MARK: - Outlets
     // TODO: Place your code here
 
     // MARK: - Vars
     
     private var wrapperController: {{ prefix }}{{ module_info.name }}ViewControllerWrapper?
-
-    // MARK: - Life cycle
+// MARK: - Life cycle
 
     override func viewDidLoad() {
         super.viewDidLoad()
         view.backgroundColor = .clear
         wrapperController = {{ prefix }}{{ module_info.name }}ViewControllerWrapper()
-        wrapperController!.owner = self
+wrapperController!.owner = self
         addChild(wrapperController!)
         wrapperController!.view.frame = view.bounds
         view.addSubview(wrapperController!.view)
@@ -37,31 +34,26 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController {
 }
 
 fileprivate extension {{ prefix }}{{ module_info.name }}ViewController {
-
-    // MARK: - UI Actions
+// MARK: - UI Actions
     // TODO: Place your code here
 
 }
 
 fileprivate extension {{ prefix }}{{ module_info.name }}ViewController {
-    
-    // MARK: - Helpers
+// MARK: - Helpers
 
 }
 
-extension {{ prefix }}{{ module_info.name }}ViewController:  {{ prefix }}{{module_info.name}}ViewInput {
-
-    func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme) {
-        // TODO: Place your code here
+extension {{ prefix }}{{ module_info.name }}ViewController: {{ prefix }}{{ module_info.name }}ViewInput {
+func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme) {
+// TODO: Place your code here
     }
 
 }
 
-class {{ prefix }}{{ module_info.name }}ViewControllerWrapper: ViewController {
-
-    weak var owner: {{ prefix }}{{ module_info.name }}ViewController?
-
-    // MARK: - Life cycle
+final class {{ prefix }}{{ module_info.name }}ViewControllerWrapper: ViewController {
+weak var owner: {{ prefix }}{{ module_info.name }}ViewController?
+// MARK: - Life cycle
 
     override func buildUI() {
         super.buildUI()
@@ -88,9 +80,8 @@ class {{ prefix }}{{ module_info.name }}ViewControllerWrapper: ViewController {
 import SwiftUI
 @available(iOS 13.0, *)
 struct {{ prefix }}{{ module_info.name }}ViewController_Preview: PreviewProvider, DeclarativePreview {
-    static var preview: Preview {
-        Preview {
-            {{ prefix }}{{ module_info.name }}ViewControllerWrapper()
+static var preview: Preview {
+        Preview {{{ prefix }}{{ module_info.name }}ViewControllerWrapper()
         }
         .colorScheme(.dark)
         .device(.iPhoneX)
