--- a/Tests/Configurator/configurator_tests.mcflurry.swift.liquid
+++ b/Tests/Configurator/configurator_tests.mcflurry.swift.liquid
@@ -1,7 +1,7 @@
 {% include 'header' %}
 
 import XCTest
-class {{ prefix }}{{ module_info.name }}ModuleConfiguratorTests: XCTestCase {
+final class {{ prefix }}{{ module_info.name }}ModuleConfiguratorTests: XCTestCase {
 override func setUp() {
         super.setUp()
         // Put setup code here. This method is called before the invocation of each test method in the class.
