--- a/Tests/Presenter/presenter_tests.alert.swift.liquid
+++ b/Tests/Presenter/presenter_tests.alert.swift.liquid
@@ -1,7 +1,7 @@
 {% include 'header' %}
 
 import XCTest
-class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
+final class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
 override func setUp() {
         super.setUp()
         // Put setup code here. This method is called before the invocation of each test method in the class.
@@ -14,21 +14,18 @@ override func setUp() {
 
     class MockInteractor: {{ prefix }}{{ module_info.name }}InteractorInput {
 // MARK: - {{ prefix }}{{ module_info.name }}InteractorInput
-
-    func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {
-    }
+func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {
+}
         
     func deinitialize() {}
     }
 
     class MockRouter: {{ prefix }}{{ module_info.name }}RouterInput {
-        
-        // MARK: - Vars
+// MARK: - Vars
         // TODO: Place your code here
 
         // MARK: - {{ prefix }}{{ module_info.name }}RouterInput
-        
-        func dismiss() {
+func dismiss() {
         }
 
         func dismissAsync() async {
