--- a/Tests/Router/router_tests.swift.liquid
+++ b/Tests/Router/router_tests.swift.liquid
@@ -1,8 +1,7 @@
 {% include 'header' %}
 
 import XCTest
-
-class {{ prefix }}{{ module_info.name }}RouterTests: XCTestCase {
+final class {{ prefix }}{{ module_info.name }}RouterTests: XCTestCase {
 
     override func setUp() {
         super.setUp()
